--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Tourist Voucher</title>
+    <title>List Planes</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -14,9 +14,10 @@
     <div class="container">
         <header>
             <div class="header">
-                <div class="header__name">My vouchers</div>
+                <div class="header__name">My Plane</div>
                 <div class="search">
-                    <input class="search__input" id="search__input" type="text" placeholder="Enter a country to visit" />
+                    <input class="search__input" id="search__input" type="text"
+                        placeholder="Enter a plane " />
                     <button class="search__button" id="search__button" type="button">Search</button>
                     <button class="clear search__button" id="clear__search__button" type="button">Cancel</button>
                 </div>
@@ -26,9 +27,31 @@
 
     <div class="content">
         <aside class="aside">
-            <h2>Manage vouchers</h2>
+
+            <form id="add_form">
+                <h2>Create Plane</h2>
+
+                <div class="item_form">
+                    <label for="name_input" class="form_label">Name</label>
+                    <input type="text" class="form_control" id="name_input" required>
+                </div>
+                <div class="item_form">
+                    <label for="duration_input" class="form_label">Tank Volume(Li)</label>
+                    <input type="number" class="form_control" id="tank_input">
+                </div>
+                <div class="item_form">
+                    <label for="price_input" class="form_label">Number Of Passenger</label>
+                    <input type="number" class="form_control" id="number_input">
+                </div>
+                <button id="submit_button" type="submit" class="btn btn-primary">
+                    Submit
+                </button>
+            </form>
+
+
+            <h2>Manager Planes</h2>
             <div class="sort">
-                Sort by the price
+                Sort by the number passanger
                 <input type="checkbox" id="sort__checkbox">
                 </label>
             </div>
@@ -36,7 +59,7 @@
             <hr>
 
             <div class="count">
-                <div>Total price of all your vouchers</div>
+                <div>Total number passanger of all your planes</div>
                 <button class="count__button" id="count__button" type="button">Count</button>
                 <div>
                     Total price: <span id="total-price">0</span> euros.
@@ -53,4 +76,5 @@
 
     <script type="module" src="./js/index.js"></script>
 </body>
+
 </html>
