--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div>Total number passanger of all your planes</div>
                 <button class="count__button" id="count__button" type="button">Count</button>
                 <div>
-                    Total price: <span id="total-price">0</span> euros.
+                    Total number passanger: <span id="total-number">0</span> passangers.
                 </div>
             </div>
         </aside>
